feat: Implement email encryption store with key management and encrypted email handling
feat: Create email forwarding store for managing external and account forwarding rules

feat: Add email scheduling store for scheduling emails and managing reminders

feat: Develop email tracking store for tracking email events and statistics

feat: Establish multi-account store for managing multiple email accounts and sessions

feat: Introduce remember me store for managing tokens and devices for user sessions

feat: Create signature store for managing email signatures and settings

feat: Implement vacation store for managing vacation responders and settings

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -5,6 +5,7 @@
     "username_placeholder": "user@example.com",
     "password_label": "Password",
     "password_placeholder": "Enter your password",
+    "remember_me": "Remember me",
     "sign_in": "Sign in",
     "signing_in": "Signing in...",
     "loading": "Loading...",
@@ -88,6 +89,8 @@
     "print": "Print",
     "view_source": "View source",
     "email_source": "Email Source",
+    "raw_source": "Raw Message Source",
+    "loading_source": "Loading source...",
     "copy_source": "Copy to clipboard",
     "source_copied": "Source copied to clipboard",
     "attachments": "Attachments",
@@ -204,6 +207,7 @@
     "subject_label": "Subject:",
     "file_size_kb": "KB",
     "template": "Template",
+    "signature": "Signature",
     "no_templates": "No templates",
     "fill_template_variables": "Fill in Template Variables",
     "fill_template_variables_description": "Enter values for the template variables below",
@@ -293,6 +297,8 @@
       "email": "Email Behavior",
       "filters": "Email Filters",
       "templates": "Templates",
+      "signatures": "Signatures",
+      "vacation": "Vacation Responder",
       "composer": "Composer",
       "privacy": "Privacy & Security",
       "account": "Account",
@@ -555,6 +561,69 @@
       "variable_company_name": "Company Name",
       "variable_signature": "Signature Block"
     },
+    "email_signatures": {
+       "title": "Email Signatures",
+       "description": "Create and manage email signatures for your accounts",
+       "total_signatures": "Total Signatures",
+       "default_signature": "Default Signature",
+       "none": "None",
+       "select_identity": "Select Email Account",
+       "signature_settings": "Signature Settings",
+       "auto_append_signature": "Automatically append signature to new emails",
+       "auto_append_replies": "Automatically append signature to replies",
+       "auto_append_forwards": "Automatically append signature to forwards",
+       "separator_style": "Signature Separator",
+       "separator_none": "No separator",
+       "separator_dashes": "Dashes (-- )",
+       "separator_line": "Line (___)",
+       "search_placeholder": "Search signatures...",
+       "new_signature": "Create New Signature",
+       "signature_name_placeholder": "Signature name (e.g., \"Professional\", \"Casual\")",
+       "is_html": "This signature contains HTML",
+       "signature_content_placeholder": "Signature content",
+       "create_signature": "Create Signature",
+       "no_signatures": "No signatures yet. Create one to get started.",
+       "duplicate_signature": "Duplicate this signature",
+       "delete_signature": "Delete this signature",
+       "set_as_default": "Set as default",
+       "default": "Default",
+       "html_format": "HTML format",
+       "plain_text_format": "Plain text format",
+       "preview": "Preview",
+       "created": "Created"
+     },
+    "vacation_responder": {
+       "title": "Vacation Responder",
+       "description": "Set up automatic replies when you're away from your email",
+       "total_responders": "Total Responders",
+       "active_responder": "Active Responder",
+       "none": "None",
+       "select_identity": "Select Email Account",
+       "responder_settings": "Responder Settings",
+       "auto_disable_on_return": "Automatically disable when end date passes",
+       "notify_on_responses": "Notify me when vacation response is sent",
+       "search_placeholder": "Search responders...",
+       "new_responder": "Create New Vacation Responder",
+       "subject_placeholder": "Vacation subject (e.g., \"Out of office\")",
+       "message_placeholder": "Vacation message",
+       "start_date": "Start Date",
+       "start_time": "Start Time",
+       "end_date": "End Date",
+       "end_time": "End Time",
+       "respond_to_all": "Respond to all senders",
+       "respond_once_per_sender": "Only send one response per sender",
+       "create_responder": "Create Responder",
+       "no_responders": "No vacation responders yet. Create one to get started.",
+       "duplicate_responder": "Duplicate this responder",
+       "delete_responder": "Delete this responder",
+       "enabled": "Enabled",
+       "active": "Active",
+       "message": "Message",
+       "created": "Created",
+       "error_invalid_dates": "End date must be after start date",
+       "yes": "Yes",
+       "no": "No"
+     },
     "advanced": {
       "title": "Advanced",
       "description": "Advanced options and developer settings",
@@ -732,10 +801,13 @@
   },
   "calendar": {
     "title": "Calendar",
+    "back_to_email": "Back to Email",
     "new_event": "New Event",
     "create_event": "Create Event",
     "edit_event": "Edit Event",
+    "update_event": "Update Event",
     "delete_event": "Delete Event",
+    "confirm_delete_event": "Are you sure you want to delete this event?",
     "event_title_placeholder": "Event title",
     "event_description_placeholder": "Description (optional)",
     "event_location_placeholder": "Location (optional)",
@@ -754,10 +826,17 @@
     "month_view": "Month",
     "week_view": "Week",
     "day_view": "Day",
+    "agenda_view": "Agenda",
+    "view": "View",
+    "no_events": "No events",
     "new_calendar": "New Calendar",
+    "create_calendar": "Create Calendar",
     "calendar_name": "Calendar name",
+    "calendar_name_placeholder": "Enter calendar name",
     "calendar_description": "Calendar description",
+    "calendar_description_placeholder": "Enter calendar description (optional)",
     "calendar_color": "Calendar color",
+    "calendar_read_only": "This calendar is read-only",
     "event_saved": "Event saved",
     "event_deleted": "Event deleted",
     "event_updated": "Event updated",
@@ -782,5 +861,302 @@
     "private": "Private",
     "busy": "Mark as busy",
     "free": "Mark as free"
+  },
+  "email_aliases": {
+    "title": "Email Aliases",
+    "description": "Create and manage multiple email addresses for your account",
+    "summary": {
+      "label": "Alias Summary",
+      "description": "Overview of your email aliases",
+      "active": "Active Aliases",
+      "inactive": "Inactive Aliases"
+    },
+    "create": {
+      "label": "Create New Alias",
+      "description": "Add a new email alias to your account",
+      "button": "Create Alias",
+      "title": "Create New Alias"
+    },
+    "edit": {
+      "title": "Edit Alias"
+    },
+    "list": {
+      "title": "Your Aliases"
+    },
+    "form": {
+      "email": "Email Address",
+      "display_name": "Display Name",
+      "display_name_placeholder": "e.g., Support Team",
+      "category": "Category",
+      "category_placeholder": "e.g., work, personal, support",
+      "visibility": "Recipient Visibility",
+      "cancel": "Cancel",
+      "create": "Create",
+      "update": "Update"
+    },
+    "visibility": {
+      "primary": "Show Primary Email",
+      "alias": "Show Alias Email",
+      "masked": "Hide Email Address"
+    },
+    "actions": {
+      "activate": "Activate",
+      "deactivate": "Deactivate",
+      "delete": "Delete",
+      "edit": "Edit"
+    },
+    "error": {
+      "email_required": "Email address is required",
+      "invalid_email": "Please enter a valid email address",
+      "alias_exists": "This alias already exists",
+      "creation_failed": "Failed to create alias",
+      "update_failed": "Failed to update alias",
+      "delete_failed": "Failed to delete alias"
+    },
+    "confirm": {
+      "delete_alias": "Are you sure you want to delete this alias?"
+    }
+  },
+  "alias_management": {
+    "tabs": {
+      "general": "General",
+      "forwarding": "Forwarding Rules",
+      "stats": "Statistics"
+    },
+    "general": {
+      "email": "Email Address",
+      "display_name": "Display Name",
+      "description": "Description",
+      "category": "Category",
+      "category_placeholder": "e.g., work, personal, support",
+      "can_send": "Can send emails from this alias",
+      "can_receive": "Can receive emails on this alias"
+    },
+    "forwarding": {
+      "rules_title": "Forwarding Rules",
+      "add_rule": "Add Rule",
+      "rule_name": "Rule Name",
+      "rule_name_placeholder": "e.g., Forward to support team",
+      "conditions": "Conditions",
+      "condition_from": "From",
+      "condition_to": "To",
+      "condition_subject": "Subject",
+      "condition_body": "Body",
+      "operator_contains": "contains",
+      "operator_equals": "equals",
+      "operator_starts": "starts with",
+      "operator_ends": "ends with",
+      "condition_value": "Value",
+      "action": "Action",
+      "action_forward": "Forward",
+      "action_copy": "Copy",
+      "action_redirect": "Redirect",
+      "action_discard": "Discard",
+      "forward_to": "Forward To",
+      "email_placeholder": "recipient@example.com",
+      "forwards_to": "Forwards to",
+      "no_rules": "No forwarding rules configured",
+      "cancel": "Cancel",
+      "add_rule": "Add Rule",
+      "update_rule": "Update Rule"
+    },
+    "stats": {
+      "emails_sent": "Emails Sent",
+      "emails_received": "Emails Received",
+      "last_used": "Last Used",
+      "no_data": "No usage data available yet"
+    },
+    "close": "Close",
+    "error": {
+      "rule_name_required": "Rule name is required",
+      "forward_address_required": "At least one forward address is required",
+      "rule_creation_failed": "Failed to create forwarding rule",
+      "rule_update_failed": "Failed to update forwarding rule"
+    }
+  },
+  "alias_admin": {
+    "tabs": {
+      "policies": "Policies",
+      "audit": "Audit Log",
+      "stats": "Statistics"
+    },
+    "policies": {
+      "title": "Alias Policies",
+      "add_policy": "Create Policy",
+      "name": "Policy Name",
+      "name_placeholder": "e.g., Standard User Policy",
+      "description": "Description",
+      "max_aliases": "Maximum Aliases Per User",
+      "unlimited": "Unlimited",
+      "naming_pattern": "Naming Pattern (Regex)",
+      "pattern_placeholder": "e.g., ^[a-z]+@example\\.com$",
+      "allowed_domains": "Allowed Domains",
+      "domains_placeholder": "example.com, support.example.com",
+      "allow_external_forwarding": "Allow external forwarding",
+      "enabled": "Enabled",
+      "disabled": "Disabled",
+      "no_policies": "No policies configured",
+      "cancel": "Cancel",
+      "create": "Create",
+      "update": "Update"
+    },
+    "audit": {
+      "title": "Audit Log",
+      "export": "Export Aliases",
+      "import": "Import Aliases",
+      "no_logs": "No audit logs available"
+    },
+    "stats": {
+      "total_aliases": "Total Aliases",
+      "active_aliases": "Active Aliases",
+      "inactive_aliases": "Inactive Aliases",
+      "archived_aliases": "Archived Aliases",
+      "total_users": "Total Users",
+      "users_with_aliases": "Users with Aliases",
+      "avg_per_user": "Average per User",
+      "forwarding_rules": "Forwarding Rules",
+      "policy_violations": "Policy Violations",
+      "no_data": "No statistics available"
+    },
+    "error": {
+      "policy_name_required": "Policy name is required",
+      "policy_creation_failed": "Failed to create policy",
+      "policy_update_failed": "Failed to update policy",
+      "invalid_import_format": "Invalid import format",
+      "import_failed": "Failed to import aliases"
+    }
+  },
+  "advanced_search": {
+    "title": "Advanced Search",
+    "description": "Search emails with multiple filters",
+    "match_all": "Match all conditions",
+    "match_any": "Match any condition",
+    "add_filter": "Add Filter",
+    "remove": "Remove",
+    "active_filters": "Active Filters",
+    "no_filters": "No filters added yet",
+    "value_placeholder": "Enter value",
+    "save_search": "Save Search",
+    "saved_searches": "Saved Searches",
+    "search_name": "Search name",
+    "search_description": "Description (optional)"
+  },
+  "email_scheduling": {
+    "title": "Schedule Email",
+    "description": "Schedule emails to be sent later",
+    "schedule_time": "Schedule Time",
+    "frequency": "Frequency",
+    "once": "Send once",
+    "daily": "Daily",
+    "weekly": "Weekly",
+    "monthly": "Monthly",
+    "yearly": "Yearly",
+    "end_date": "End Date",
+    "timezone": "Timezone",
+    "reminder": "Remind me before sending",
+    "scheduled_emails": "Scheduled Emails",
+    "no_scheduled": "No scheduled emails",
+    "cancel_schedule": "Cancel Schedule",
+    "reschedule": "Reschedule"
+  },
+  "email_tracking": {
+    "title": "Email Tracking",
+    "description": "Track email opens and clicks",
+    "enable_tracking": "Enable tracking",
+    "track_opens": "Track opens",
+    "track_clicks": "Track clicks",
+    "track_delivery": "Track delivery",
+    "notify_on_open": "Notify when opened",
+    "notify_on_click": "Notify when clicked",
+    "open_rate": "Open Rate",
+    "click_rate": "Click Rate",
+    "delivery_rate": "Delivery Rate",
+    "tracking_data": "Tracking Data",
+    "no_tracking_data": "No tracking data available",
+    "first_opened": "First Opened",
+    "last_opened": "Last Opened",
+    "clicked_links": "Clicked Links"
+  },
+  "email_forwarding": {
+    "title": "Email Forwarding",
+    "description": "Forward emails to other addresses or accounts",
+    "external_forwarding": "External Forwarding",
+    "account_forwarding": "Account Forwarding",
+    "conditional_rules": "Conditional Rules",
+    "forward_to": "Forward to",
+    "keep_copy": "Keep a copy in original mailbox",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
+    "add_forwarding": "Add Forwarding",
+    "no_forwarding": "No forwarding rules configured",
+    "forwarding_stats": "Forwarding Statistics",
+    "emails_forwarded": "Emails Forwarded",
+    "last_forwarded": "Last Forwarded",
+    "failures": "Failures"
+  },
+  "multi_account": {
+    "title": "Multiple Accounts",
+    "description": "Manage multiple email accounts",
+    "add_account": "Add Account",
+    "accounts": "Accounts",
+    "current_account": "Current Account",
+    "switch_account": "Switch Account",
+    "account_settings": "Account Settings",
+    "primary_account": "Primary Account",
+    "set_as_primary": "Set as Primary",
+    "remove_account": "Remove Account",
+    "no_accounts": "No accounts added",
+    "account_email": "Account Email",
+    "jmap_server": "JMAP Server"
+  },
+  "remember_me": {
+    "title": "Remember Me",
+    "description": "Stay logged in on this device",
+    "remember_this_device": "Remember this device",
+    "trusted_devices": "Trusted Devices",
+    "device_name": "Device Name",
+    "last_used": "Last Used",
+    "remove_device": "Remove Device",
+    "no_devices": "No trusted devices",
+    "device_type": "Device Type",
+    "browser": "Browser",
+    "os": "Operating System"
+  },
+  "email_encryption": {
+    "title": "Email Encryption",
+    "description": "Encrypt and sign emails with PGP/GPG",
+    "enable_encryption": "Enable Encryption",
+    "encryption_method": "Encryption Method",
+    "pgp": "PGP",
+    "gpg": "GPG",
+    "smime": "S/MIME",
+    "auto_encrypt": "Auto-encrypt to trusted recipients",
+    "auto_sign": "Auto-sign emails",
+    "manage_keys": "Manage Keys",
+    "import_key": "Import Key",
+    "export_key": "Export Key",
+    "generate_key": "Generate Key",
+    "key_fingerprint": "Key Fingerprint",
+    "key_expires": "Key Expires",
+    "trusted_recipients": "Trusted Recipients",
+    "add_recipient": "Add Recipient",
+    "no_keys": "No encryption keys configured"
+  },
+  "calendar_invites": {
+    "title": "Calendar Invites",
+    "description": "Manage calendar invitations",
+    "pending_invites": "Pending Invites",
+    "accept": "Accept",
+    "decline": "Decline",
+    "tentative": "Tentative",
+    "organizer": "Organizer",
+    "attendees": "Attendees",
+    "event_time": "Event Time",
+    "event_location": "Location",
+    "rsvp_status": "RSVP Status",
+    "add_to_calendar": "Add to Calendar",
+    "no_invites": "No pending invites",
+    "invite_response": "Invite Response",
+    "add_comment": "Add Comment"
   }
 }
