--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -5,6 +5,7 @@
     "username_placeholder": "utilisateur@exemple.com",
     "password_label": "Mot de passe",
     "password_placeholder": "Entrez votre mot de passe",
+    "remember_me": "Se souvenir de moi",
     "sign_in": "Se connecter",
     "signing_in": "Connexion en cours...",
     "loading": "Chargement...",    "remove_from_history": "Supprimer de l'historique",    "error": {
@@ -86,6 +87,8 @@
     "print": "Imprimer",
     "view_source": "Voir la source",
     "email_source": "Source de l'email",
+    "raw_source": "Code source du message",
+    "loading_source": "Chargement du code source...",
     "copy_source": "Copier dans le presse-papiers",
     "source_copied": "Source copiée dans le presse-papiers",
     "attachments": "Pièces jointes",
@@ -202,6 +205,7 @@
     "subject_label": "Objet :",
     "file_size_kb": "Ko",
     "template": "Modèle",
+    "signature": "Signature",
     "no_templates": "Aucun modèle",
     "fill_template_variables": "Remplissez les variables du modèle",
     "fill_template_variables_description": "Entrez les valeurs pour les variables du modèle ci-dessous",
@@ -291,6 +295,8 @@
       "email": "Comportement email",
       "filters": "Filtres d'email",
       "templates": "Modèles",
+      "signatures": "Signatures",
+      "vacation": "Répondeur de vacances",
       "composer": "Compositeur",
       "privacy": "Confidentialité et sécurité",
       "account": "Compte",
@@ -553,6 +559,69 @@
       "variable_company_name": "Nom de l'entreprise",
       "variable_signature": "Bloc de signature"
     },
+    "email_signatures": {
+      "title": "Signatures d'email",
+      "description": "Créez et gérez les signatures d'email pour vos comptes",
+      "total_signatures": "Signatures totales",
+      "default_signature": "Signature par défaut",
+      "none": "Aucune",
+      "select_identity": "Sélectionner un compte email",
+      "signature_settings": "Paramètres de signature",
+      "auto_append_signature": "Ajouter automatiquement la signature aux nouveaux emails",
+      "auto_append_replies": "Ajouter automatiquement la signature aux réponses",
+      "auto_append_forwards": "Ajouter automatiquement la signature aux transferts",
+      "separator_style": "Séparateur de signature",
+      "separator_none": "Pas de séparateur",
+      "separator_dashes": "Tirets (-- )",
+      "separator_line": "Ligne (___)",
+      "search_placeholder": "Rechercher des signatures...",
+      "new_signature": "Créer une nouvelle signature",
+      "signature_name_placeholder": "Nom de la signature (par ex. \"Professionnel\", \"Casual\")",
+      "is_html": "Cette signature contient du HTML",
+      "signature_content_placeholder": "Contenu de la signature",
+      "create_signature": "Créer une signature",
+      "no_signatures": "Aucune signature pour le moment. Créez-en une pour commencer.",
+      "duplicate_signature": "Dupliquer cette signature",
+      "delete_signature": "Supprimer cette signature",
+      "set_as_default": "Définir par défaut",
+      "default": "Par défaut",
+      "html_format": "Format HTML",
+      "plain_text_format": "Format texte brut",
+      "preview": "Aperçu",
+      "created": "Créé"
+    },
+   "vacation_responder": {
+      "title": "Répondeur de vacances",
+      "description": "Configurez des réponses automatiques lorsque vous êtes absent de votre email",
+      "total_responders": "Répondeurs totaux",
+      "active_responder": "Répondeur actif",
+      "none": "Aucun",
+      "select_identity": "Sélectionner un compte email",
+      "responder_settings": "Paramètres du répondeur",
+      "auto_disable_on_return": "Désactiver automatiquement à la date de fin",
+      "notify_on_responses": "Me notifier quand une réponse de vacances est envoyée",
+      "search_placeholder": "Rechercher des répondeurs...",
+      "new_responder": "Créer un nouveau répondeur de vacances",
+      "subject_placeholder": "Sujet de vacances (par ex. \"Absent du bureau\")",
+      "message_placeholder": "Message de vacances",
+      "start_date": "Date de début",
+      "start_time": "Heure de début",
+      "end_date": "Date de fin",
+      "end_time": "Heure de fin",
+      "respond_to_all": "Répondre à tous les expéditeurs",
+      "respond_once_per_sender": "Envoyer une seule réponse par expéditeur",
+      "create_responder": "Créer un répondeur",
+      "no_responders": "Aucun répondeur de vacances pour le moment. Créez-en un pour commencer.",
+      "duplicate_responder": "Dupliquer ce répondeur",
+      "delete_responder": "Supprimer ce répondeur",
+      "enabled": "Activé",
+      "active": "Actif",
+      "message": "Message",
+      "created": "Créé",
+      "error_invalid_dates": "La date de fin doit être après la date de début",
+      "yes": "Oui",
+      "no": "Non"
+    },
     "advanced": {
       "title": "Avancé",
       "description": "Options avancées et paramètres développeur",
@@ -730,10 +799,13 @@
   },
   "calendar": {
     "title": "Calendrier",
+    "back_to_email": "Retour à l'e-mail",
     "new_event": "Nouvel événement",
     "create_event": "Créer un événement",
     "edit_event": "Modifier l'événement",
+    "update_event": "Mettre à jour l'événement",
     "delete_event": "Supprimer l'événement",
+    "confirm_delete_event": "Êtes-vous sûr de vouloir supprimer cet événement ?",
     "event_title_placeholder": "Titre de l'événement",
     "event_description_placeholder": "Description (facultatif)",
     "event_location_placeholder": "Lieu (facultatif)",
@@ -752,10 +824,17 @@
     "month_view": "Mois",
     "week_view": "Semaine",
     "day_view": "Jour",
+    "agenda_view": "Agenda",
+    "view": "Affichage",
+    "no_events": "Aucun événement",
     "new_calendar": "Nouveau calendrier",
+    "create_calendar": "Créer un calendrier",
     "calendar_name": "Nom du calendrier",
+    "calendar_name_placeholder": "Entrez le nom du calendrier",
     "calendar_description": "Description du calendrier",
+    "calendar_description_placeholder": "Entrez la description du calendrier (facultatif)",
     "calendar_color": "Couleur du calendrier",
+    "calendar_read_only": "Ce calendrier est en lecture seule",
     "event_saved": "Événement enregistré",
     "event_deleted": "Événement supprimé",
     "event_updated": "Événement mis à jour",
